--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-sass": "^2.0.4",
-    "gulp-concat": "^2.2.0",
+    "gulp-concat": "^2.6.1",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^2.4.0",
+    "gulp-uglify": "^2.0.1"
   },
   "devDependencies": {
     "bower": "^1.3.3",
@@ -26,8 +28,15 @@
     "cordova-plugin-console",
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
+    "cordova-plugin-badge",
+    "cordova-plugin-dialogs",
+    "cordova-plugin-email-composer",
+    "cordova-plugin-inappbrowser",
     "cordova-plugin-splashscreen",
-    "cordova-plugin-device"
+    "cordova-plugin-x-socialsharing",
+    "cordova-plugin-x-toast",
+    "cordova-plugin-device",
+    "phonegap-facebook-plugin"
   ],
   "cordovaPlatforms": []
 }
