--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "git@github.com:fauzie/app.git"
   },
   "dependencies": {
+    "@ionic/cloud": "^0.15.1",
     "gulp": "^3.5.6",
     "gulp-concat": "^2.6.1",
     "gulp-minify-css": "^0.3.0",
