--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "fauzie",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.3.2"
+    "ionic": "driftyco/ionic-bower#1.3.2",
+    "angularfire": "^2.3.0"
   },
   "dependencies": {}
 }
