--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,39 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.orig
+*.log
+*.rej
+*.swo
+*.swp
+*.zip
+*.vi
+*~
 
-node_modules/
-platforms/
-plugins/
+# OS or Editor folders
+.DS_Store
+._*
+Thumbs.db
+.cache
+.project
+.settings
+.tmproj
+*.esproj
+nbproject
+*.sublime-project
+*.sublime-workspace
+.idea
+.vscode
+
+# Folders to ignore
+.sass-cache
+demo-content
+node_modules
+framework
+dist
+
+# Ionic Specific
+platforms
+plugins
+docs
 www/lib
-!www/lib/ionic
