--- a/bower.json
+++ b/bower.json
@@ -5,5 +5,11 @@
     "ionic": "driftyco/ionic-bower#1.3.2",
     "angularfire": "^2.3.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "angular-moment": "^1.0.1",
+    "ionic-modal-select": "^1.3.1",
+    "ngCordova": "^0.1.27-alpha",
+    "checklist-model": "^0.11.0",
+    "ionic-datepicker": "^1.2.1"
+  }
 }
